@@ -1,3 +1,9 @@
+2004-03-18 Christian Schaller <Uraeus@gnome.org>
+
+	* autogen.sh: Remove need for gnome-common
+	  mozilla-plugin: Remove + symbol in Makefile that made autogen barf
+	  Fix up spec file for latest changes and fix some old sins
+
 2004-03-20  Caleb Moore <c.moore@student.unsw.edu.au>
 
 	* rsvg-styles.c: fixes to masks.
